--- a/aboutme.html
+++ b/aboutme.html
@@ -8,32 +8,33 @@ css: "/css/aboutme.css"
 
 <p class="about-text">
 <span class="fa fa-briefcase about-icon"></span>
-Currently as Graduate Research Assistant, I collaborate with a variety of highly-trained professionals – physicians, pharmacists, MS- and PhD-trained stastisticians, among others – on innovative projects. I serve as the leading or secondary biostatistician on at least five projects. 
+
+Currently working as Graduate Research Assistant in a machine lab, I collaborate with a variety of highly-trained professionals among others on establishing the open source ecosystem around the data.table package. 
 </p>
 
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
-Obtained my MSc in <strong>Statistics</strong> from Northern Arizona University and my BSc in <strong>Statistics</strong> from Kwame Nkrumah University of Science and Technology, Ghana.
+In the process of obtaining my MSc in <strong>Informatics</strong> from Northern Arizona University and Obtained my BSc in <strong>Statistics</strong> from Kwame Nkrumah University of Science and Technology, Ghana.
 </p>
 
-<p class="about-text">
-<span class="fa fa-code about-icon"></span>
-I enjoy writing <strong>useful & reusable R codes</strong> for my projects. In the past several years, I have become an experienced R user.
-</p>
+#<p class="about-text">
+#<span class="fa fa-code about-icon"></span>
+#I enjoy writing <strong>collaborating on</strong> for my projects. In the past several years, I have become an experienced R user.
+#</p>
 
 <p class="about-text">
 <span class="fa fa-heart about-icon"></span>
-In my leaisure time I watch European footbal, and I am a <strong>Barcelona</strong> fan.
+In my leaisure time I watch dance vidoes and try recreating them, and I listen to a lot of <strong>Afrobeats</strong> song.
 </p>
 
 <p class="about-text">
 <span class="fa fa-file-text about-icon"></span>
-The <strong><a href="/research">research</a></strong> page is a nice place to see some of my work, but you can also view my <a href="/CV">cv</a>. 
+The <strong><a href="/githubpage">research</a></strong> page is a nice place to see some of my work, but you can also view my <a href="/CV">cv</a>. 
 </p>
 
 <p class="about-text">
 <span class="fa fa-globe about-icon"></span>
-Grew up and did my undergrad in <i>Kumasi, Ghana</i>; moved to <i>Flagstaff, Arizona</i> for grad school; crossed the border again to <i>Salt Lake City, Utah</i> to continue grad school.
+Grew up in Accra, Ghana and did my undergrad in <i>Kumasi, Ghana</i>; moved to <i>Flagstaff, Arizona</i> for grad school.
 </p>
 
 </div>
