--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Welcome!
-subtitle: Ransmond's personal webpage
+subtitle: Doris's personal webpage
 use-site-title: true
 bigimg:
   - "/img/big-img/fvv.jpg" : "Campus/ U of U"
@@ -11,9 +11,9 @@ bigimg:
   <h3 style="color:steelblue;">About Me</h3>
 </header>
 
-<p>My name is Ransmond Berchie, and I am a Ph.D. Biostatistics student at the <a href='https://medicine.utah.edu/population-health-sciences'>Population Health Science Department</a> of University of Utah. I am honored to be advised by <a href='https://medicine.utah.edu/population-health-sciences/dscharf'>Dr. Daniel Scharftein</a> and <a href='https://medicine.utah.edu/faculty/tom-h-greene'>Dr. Tom Greene</a> on my dissertation papers. As part of my doctoral studies, I also serve as the lead (secondary) analyst in <a href='https://medicine.utah.edu/population-health-sciences/research/facultylabs/bress'>Dr. Adam Bress's</a> lab. I am broadly interested in causal inference, survival analysis, longitudinal data analysis, and pharmacoepidemiology.</p>
+<p>My name is Doris Afriyie Amoakohene and I am an Msc. Informatics student at the <a href='https://nau.edu/school-of-informatics-computing-and-cyber-systems'>The School of Informatics, Computing, and Cyber Systems (SICCS)</a> of Northern Arizona University. I am honored to be advised by <a href='https://tdhock.github.io/'>Toby Hocking/a> As part of my Masters, I work as a contributor to the data.table packages in R. I am broadly interested in data anlytics, Computing and Open source </p>
 
-<p>I earned my Bachelor's degree in Statistics from <a href='https://statacts.knust.edu.gh/'>Kwame Nkrumah University of Science and Technology-Kumasi, Ghana (KNUST)</a>. After serving as a Teaching Assistant for one year at KNUST, I moved to <a href='https://nau.edu/math/'>Northern Arizona University (NAU)</a> for my Master's degree in Statistics.</p>
+<p>I earned my Bachelor's degree in Statistics from <a href='https://statacts.knust.edu.gh/'>Kwame Nkrumah University of Science and Technology-Kumasi, Ghana (KNUST)</a>. I worked with the National Communication Authority, the body that regulate Mobile Networks in ghana as a billing and analysis officer and later moved to Deloitte to work with Financial Advisory as a Corporate Finance Advisor, I moved to <a href='https://nau.edu/math/'>Northern Arizona University (NAU)</a> for my Master's degree in Informatics.</p>
 
 
 <header>
@@ -21,12 +21,7 @@ bigimg:
 </header>
 
 <ul>
-  <li>Student Scholarship Award - Biopharmaceutical Section, American Statistical Association (2024)</li>
-  <li>Graduate Statistician Accreditation - American Statistical Association (2023)</li>
-  <li>Lester R. Curtin Award - American Statistical Association (2022)</li>
-  <li>African American Doctoral Scholars Initiative Award - University of Utah (2020)</li>
-  <li>Carlson-Diekelman Rushall-Schroeder Memorial Endowed Scholarship - Northern Arizona University (2019)</li>
-  <li>Outstanding Graduate GPA - Northern Arizona University (2019)</li>
+  xxx
 </ul>  
 
 	
