--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Welcome!
 subtitle: Doris's personal webpage
 use-site-title: true
 bigimg:
-  - "/img/big-img/fvv.jpg" : "Campus/ U of U"
+  - "/img/big-img/analytics.jpg" : "Campus/ U of U"
 ---
 
 <header>
