--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@ bigimg:
   <h3 style="color:steelblue;">About Me</h3>
 </header>
 
-<p>My name is Doris Afriyie Amoakohene and I am an Msc. Informatics student at the <a href='https://nau.edu/school-of-informatics-computing-and-cyber-systems'>The School of Informatics, Computing, and Cyber Systems (SICCS)</a> of Northern Arizona University. I am honored to be advised by <a href='https://tdhock.github.io/'>Toby Hocking/a> As part of my Masters, I work as a contributor to the data.table packages in R. I am broadly interested in data anlytics, Computing and Open source </p>
+<p> Doris Afriyie Amoakohene is a Master's student in Informatics at the <a href='https://nau.edu/school-of-informatics-computing-and-cyber-systems'>The School of Informatics, Computing, and Cyber Systems (SICCS)</a> of Northern Arizona University. where she is advised by <a href='https://tdhock.github.io/'>Toby Hocking/a> As part of her graduate studies, she contributes to the development of the data.table package in R. Her research interests include data analytics, computing, and open-source technologies. </p>
 
-<p>I earned my Bachelor's degree in Statistics from <a href='https://statacts.knust.edu.gh/'>Kwame Nkrumah University of Science and Technology-Kumasi, Ghana (KNUST)</a>. I worked with the National Communication Authority, the body that regulate Mobile Networks in ghana as a billing and analysis officer and later moved to Deloitte to work with Financial Advisory as a Corporate Finance Advisor, I moved to <a href='https://nau.edu/math/'>Northern Arizona University (NAU)</a> for my Master's degree in Informatics.</p>
+<p> Doris holds a Bachelor's degree in Statistics from <a href='https://statacts.knust.edu.gh/'>Kwame Nkrumah University of Science and Technology-Kumasi, Ghana (KNUST)</a>.  Prior to pursuing her graduate degree, she worked as a Billing and Analysis Officer at the National Communication Authority in Ghana and later as a Corporate Finance Advisor in the Financial Advisory department at Deloitte. then moved to <a href='https://nau.edu/math/'>Northern Arizona University (NAU)</a> for my Master's degree in Informatics.</p>
 
 
 <header>
