--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Welcome!
 subtitle: Doris's personal webpage
 use-site-title: true
 bigimg:
-  - "/img/big-img/analytics.jpg" : "Campus/ NAU "
+  - "img/analytics.jpg" : "Campus/ NAU "
 ---
 
 <header>
