--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@ bigimg:
   - "img/analytics.jpg" : "Campus/ NAU "
 ---
 
+<style>
+.post-subtitle, .post-title {
+  color: black !important;
+  font-weight: bold;
+}
+</style>
+
 <header>
   <h3 style="color:steelblue;">About Me</h3>
 </header>
