--- a/index.html
+++ b/index.html
@@ -1,18 +1,11 @@
 ---
 layout: page
-title: Welcome!
-subtitle: Doris's personal webpage
+title: <h3 style="color:black;"> Welcome!</h3>
+subtitle: <h3 style="color:black;"> Doris's personal webpage </h3>
 use-site-title: true
 bigimg:
   - "img/analytics.jpg" : "Campus/ NAU "
 ---
-
-<style>
-.post-subtitle, .post-title {
-  color: black !important;
-  font-weight: bold;
-}
-</style>
 
 <header>
   <h3 style="color:steelblue;">About Me</h3>
