--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 ---
 layout: page
-title: <h3 style="color:black;"> Welcome!</h3>
-subtitle: <h3 style="color:black;"> Doris's personal webpage </h3>
+title: Welcome!
+subtitle: Doris Amoakohene's Webpage
 use-site-title: true
 bigimg:
-  - "img/analytics.jpg" : "Campus/ NAU "
+  - "img/newcoverpage.jpg" : "Campus/ NAU"
 ---
 
 <header>
