--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@ bigimg:
 
 
 <header>
-  <h3 style="color:steelblue;">Notable Honors and Awards</h3>
+  <h3 style="color:steelblue;"> Membership </h3>
 </header>
 
 <ul>
-  xxx
+-Student Member; American Statistical Association 
+-Student Member; Royal Statistical Society 
+-Student Member; American Mathematical Society 
+-Student Member; Institute for Mathematical and Statistical Innovation
 </ul>  
 
 	
