--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@ bigimg:
 </header>
 
 <ul>
--Student Member; American Statistical Association 
--Student Member; Royal Statistical Society 
--Student Member; American Mathematical Society 
--Student Member; Institute for Mathematical and Statistical Innovation
+ <li>Student Member; American Statistical Association</li> 
+ <li>Student Member; Royal Statistical Society</li>
+<li>Student Member; American Mathematical Society</li>
+<li>Student Member; Institute for Mathematical and Statistical Innovation</li>
 </ul>  
 
 	
