--- a/index.html
+++ b/index.html
@@ -21,8 +21,10 @@ bigimg:
 </header>
 
 <ul>
- <li>Student Member; American Statistical Association</li> 
- <li>Student Member; Royal Statistical Society</li>
+<li>Student Member; American Statistical Association</li> 
+<li>Student Member;R ladies</li>
+<li>Student Member; International Society for Data Science and Analytics</li>
+<li>Student Member; Royal Statistical Society</li>
 <li>Student Member; American Mathematical Society</li>
 <li>Student Member; Institute for Mathematical and Statistical Innovation</li>
 </ul>  
