--- a/index.html
+++ b/index.html
@@ -8,12 +8,11 @@ bigimg:
 ---
 
 <header>
-  <h3 style="color:steelblue;">About Me</h3>
+  <h3 style="color:steelblue;">Welcome to my page, Hope you enjoy your scroll </h3>
 </header>
 
 <img width = "233" height = 50" src = "https://github.com/DorisAmoakohene/DorisAmoakohene.github.io/blob/master/img/IMG_8443.jpeg"> <img src = "https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" alt = "Waving hand animation" width = "40px" height = "40px"> <br>
-Welcome to my page
-Hope you enjoy your scroll 
+
 
 	
 <div class="posts-list">
