--- a/aboutme.html
+++ b/aboutme.html
@@ -6,8 +6,6 @@ css: "/css/aboutme.css"
 
 <div id="aboutme-section">
 
-<p class="about-text">
-<span class="fa fa-briefcase about-icon"></span>
 
 <p> Doris Afriyie Amoakohene is a Master's student in Informatics at the <a href='https://nau.edu/school-of-informatics-computing-and-cyber-systems'>The School of Informatics, Computing, and Cyber Systems (SICCS)</a> of Northern Arizona University. where she is advised by <a href='https://tdhock.github.io/'> Toby Hocking/a > As part of her graduate studies, she contributes to the development of the data.table package in R. Her research interests include data analytics, computing, and open-source technologies. </p>
 
@@ -28,17 +26,20 @@ css: "/css/aboutme.css"
 </ul>  
 
 
-Currently working as Graduate Research Assistant in a machine lab, I collaborate with a variety of highly-trained professionals among others on establishing the open source ecosystem around the data.table package. 
+<p class="about-text">
+<span class="fa fa-briefcase about-icon"></span>
+  
+Currently working as Graduate Research Assistant in a machine lab, I collaborate with a variety of highly-trained professionals among on the National Science Foundation(NSF) project on expanding the open source ecosystem around the data.table package. 
 </p>
 
 <p class="about-text">
 <span class="fa fa-graduation-cap about-icon"></span>
-In the process of obtaining my MSc in <strong>Informatics</strong> from Northern Arizona University and Obtained my BSc in <strong>Statistics</strong> from Kwame Nkrumah University of Science and Technology, Ghana.
+Enrolled in my MSc in <strong>Informatics program </strong> at Northern Arizona University and Obtained my BSc in <strong>Statistics</strong> from Kwame Nkrumah University of Science and Technology, Ghana.
 </p>
 
 #<p class="about-text">
 #<span class="fa fa-code about-icon"></span>
-#I enjoy writing <strong>collaborating on</strong> for my projects. In the past several years, I have become an experienced R user.
+#I enjoy <strong>collaborating on</strong> my projects.I have proficient experience in R as I use it much in my research
 #</p>
 
 <p class="about-text">
@@ -48,7 +49,7 @@ In my leaisure time I watch dance vidoes and try recreating them, and I listen t
 
 <p class="about-text">
 <span class="fa fa-file-text about-icon"></span>
-The <strong><a href="/githubpage">research</a></strong> page is a nice place to see some of my work, but you can also view my <a href="/CV">cv</a>. 
+The <strong><a href="/githubpage">semester_scoop and daa_chronicles</a></strong> page is a nice place to see some of my work, but you can also view my <a href="/CV">cv</a>. 
 </p>
 
 <p class="about-text">
