--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ bigimg:
   <h3 style="color:steelblue;">Welcome to my page, Hope you enjoy your scroll </h3>
 </header>
 
-<img src = "img/IMG_8443.jpeg"> <img src = "https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" alt = "Waving hand animation" width = "40px" height = "40px"> <br>
+<img src = "https://github.com/DorisAmoakohene/DorisAmoakohene.github.io/blob/613e4ebcdf19cd24b7495318937216f62e01b8de/img/IMG_8443.jpeg"> <img src = "https://media.giphy.com/media/hvRJCLFzcasrR4ia7z/giphy.gif" alt = "Waving hand animation" width = "40px" height = "40px"> <br>
 
 
 	
